<resources>
    <string name="app_name">Neighbors</string>
    <string name="imageTextInputEditText">Image</string>
    <string name="nomTextInputEditText">Nom</string>
    <string name="telTextInputEditText">Téléphone</string>
    <string name="websiteTextInputEditText">Website</string>
    <string name="adresseTextInputEditText">Adresse</string>
    <string name="aboutTextInputEditText">A propos de moi</string>

</resources>